tests/invalid_nodepend/invalid_hex_literal.err_exp
invalid_hex_literal.m:012: Error: function [38;5;87m`foo1'/0[39;49m [38;5;203mhas no clauses.[39;49m
invalid_hex_literal.m:013: Error: function [38;5;87m`foo2'/0[39;49m [38;5;203mhas no clauses.[39;49m
invalid_hex_literal.m:014: Error: function [38;5;87m`foo3'/0[39;49m [38;5;203mhas no clauses.[39;49m
invalid_hex_literal.m:015: Error: function [38;5;87m`foo4'/0[39;49m [38;5;203mhas no clauses.[39;49m
invalid_hex_literal.m:016: Error: function [38;5;87m`foo5'/0[39;49m [38;5;203mhas no clauses.[39;49m
invalid_hex_literal.m:017: Error: function [38;5;87m`foo6'/0[39;49m [38;5;203mhas no clauses.[39;49m
invalid_hex_literal.m:018: Error: function [38;5;87m`foo7'/0[39;49m [38;5;203mhas no clauses.[39;49m
invalid_hex_literal.m:019: Error: function [38;5;87m`foo8'/0[39;49m [38;5;203mhas no clauses.[39;49m
invalid_hex_literal.m:023: Syntax error at token `. ': expected a token that
invalid_hex_literal.m:023:   can start a (sub)term.
invalid_hex_literal.m:023: Syntax error: 0x is not followed by hexadecimal
invalid_hex_literal.m:023:   digits.
invalid_hex_literal.m:025: Syntax error at token `. ': expected a token that
invalid_hex_literal.m:025:   can start a (sub)term.
invalid_hex_literal.m:025: Syntax error: 0x is not followed by hexadecimal
invalid_hex_literal.m:025:   digits.
invalid_hex_literal.m:027: Syntax error at token `. ': expected a token that
invalid_hex_literal.m:027:   can start a (sub)term.
invalid_hex_literal.m:027: Syntax error: 0x is not followed by hexadecimal
invalid_hex_literal.m:027:   digits.
invalid_hex_literal.m:029: Syntax error at token `. ': expected a token that
invalid_hex_literal.m:029:   can start a (sub)term.
invalid_hex_literal.m:029: Syntax error: 0x is not followed by hexadecimal
invalid_hex_literal.m:029:   digits.
invalid_hex_literal.m:031: Syntax error at token `. ': expected a token that
invalid_hex_literal.m:031:   can start a (sub)term.
invalid_hex_literal.m:031: Syntax error: a hexadecimal literal cannot end with
invalid_hex_literal.m:031:   an underscore.
invalid_hex_literal.m:033: Syntax error at token `. ': expected a token that
invalid_hex_literal.m:033:   can start a (sub)term.
invalid_hex_literal.m:033: Syntax error: a hexadecimal literal cannot end with
invalid_hex_literal.m:033:   an underscore.
invalid_hex_literal.m:035: Error: clause for predicate [38;5;87m`xff'/0[39;49m [38;5;203mwithout[39;49m a
invalid_hex_literal.m:035:   corresponding `:- pred' declaration.
invalid_hex_literal.m:035: Inferred :- pred xff.
invalid_hex_literal.m:035: Syntax error: a decimal literal cannot end with an
invalid_hex_literal.m:035:   underscore.
invalid_hex_literal.m:037: Syntax error: a decimal literal cannot end with an
invalid_hex_literal.m:037:   underscore.
